<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>human_following</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="haruki.isono861@gmail.com">haaruki</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ultralytics</depend>  <!-- YOLOv8 -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
